# Android_OpenCV

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/anirudhnj/opencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/anirudhnj/opencv/: CameraViewer.java  ImageProcessing.java  MainActivity.java
app/src/main/res/layout/: activity_camera_viewer.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/anirudhnj/opencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/: build.gradle
